--- a/src/components/ToG/ToG.scss
+++ b/src/components/ToG/ToG.scss
@@ -20,22 +20,64 @@
     }
 }
 
+.article-card-container {
+}
+
+.article-card-donor-name {
+    font-family: "Poppins", sans-serif;
+    font-size: 12;
+    line-height: 1.5;
+}
+
+.article-card-donor-desc {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-size: 10;
+}
+
+.article-card-img {
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    background-position: center;
+    opacity: 0.8;
+}
+
+.article-card-ad {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h2 {
+        font-family: "Poppins", sans-serif;
+        font-size: 2em;
+        color: white;
+    }
+}
 
 // Media query
 
 // X-Small devices (portrait phones, less than 576px)
 @media (max-width: 575.98px) {
-    .tog-header{
+    .tog-header {
         height: 30vh;
     }
     .tog-header > h2 {
         font-size: 1.2em;
     }
-  }
-  
-  // Small devices (landscape phones, less than 768px)
-  @media (max-width: 767.98px) and (min-width: 575.98px) {
+
+    .article-card-img {
+        max-height: 200px;
+    }
+
+    .article-card-ad {
+        height: 150px;
+    }
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) and (min-width: 575.98px) {
     .tog-header > h2 {
         font-size: 1.5em;
     }
-  }
+}
